--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,10 +24,10 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
         {{#each restaurants}}
-        <a href="/restaurants/{{ this.id }}" class="text-secondary">
+        <a href="/restaurants/{{ this._id }}" class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src={{ this.image }} alt={{ this.name }}>
-            
+
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{ this.name }}</h6>
 
@@ -39,7 +39,9 @@
                 {{ this.rating }}
                 <i class="fas fa-star fa-xs"></i>
               </span>
-
+              <a href="/restaurants/new">create</a>
+              <a href="./restaurants/{{ this._id }}">detail</a>
+              <a href="./restaurants/{{ this._id }}/edit">edit</a>
             </div>
           </div>
         </a>
